feat: add endpoints to retrieve all versions and specific version of resources with content
